--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,17 @@
             </div>
         </div>
     </header>
+    <section class="window">
+        <div class="container">
+            <iframe width="100%" height="500" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/5mw3f?logo=1&info=1&fs=0&vr=0&sd=1&gyro=0&autorotate=0.08&thumbs=1&keys=0"></iframe>
+        </div>
+    </section>
+    <div class="text">
+        
+    </div>
     <script src="js/script.js"></script>
+    <script src="js/slick.min.js"></script>    
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </body>
 </html>
