--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,9 @@
     </header>
     <section class="window">
         <div class="container">
-            <iframe width="100%" height="500" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/5mw3f?logo=1&info=1&fs=0&vr=0&sd=1&gyro=0&autorotate=0.08&thumbs=1&keys=0"></iframe>
+            <iframe width="100%" height="400" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/5mw3f?logo=1&info=1&fs=0&vr=0&sd=1&gyro=0&autorotate=0.08&thumbs=1&keys=0"></iframe>
         </div>
+        <img src="" alt="">
     </section>
     <div class="text">
         
