--- a/src/index.html
+++ b/src/index.html
@@ -22,13 +22,41 @@
     </header>
     <section class="window">
         <div class="container">
-            <iframe width="100%" height="400" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" allowfullscreen scrolling="no" src="https://kuula.co/share/5mw3f?logo=1&info=1&fs=0&vr=0&sd=1&gyro=0&autorotate=0.08&thumbs=1&keys=0"></iframe>
+            <iframe class="window__iframe" frameborder="0" allow="xr-spatial-tracking; gyroscope; accelerometer" scrolling="no" src="https://kuula.co/share/5flth?logo=1&info=1&fs=0&vr=0&sd=1&gyro=0&autorotate=0.08&thumbs=1&keys=0"></iframe>
+            <img src="icons/3.png" alt="logo" class="window__img">
         </div>
-        <img src="" alt="">
     </section>
-    <div class="text">
-        
-    </div>
+    <section class="works">
+        <div class="container">
+            <h2 class="title">our work</h2>
+            <div class="works__plate">
+                <div class="card">
+                    <iframe class="card__youtube" width="560" height="315" src="https://www.youtube.com/embed/oHeTPOf9M5I?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h2 class="card__text">СУПЕРФИНАЛ / 360° ТРАНСЛЯЦИЯ / BetBoom Московский Кубок Селебрити 2023</h2>
+                </div>
+                <div class="card">
+                    <iframe class="card__youtube" width="560" height="315" src="https://www.youtube.com/embed/oHeTPOf9M5I?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h2 class="card__text">360° ТРАНСЛЯЦИЯ</h2>
+                </div>
+                <div class="card">
+                    <iframe class="card__youtube" width="560" height="315" src="https://www.youtube.com/embed/oHeTPOf9M5I?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h2 class="card__text">СУПЕРФИНАЛ / 360° ТРАНСЛЯЦИЯ / 2023</h2>
+                </div>
+                <div class="card">
+                    <iframe class="card__youtube" width="560" height="315" src="https://www.youtube.com/embed/oHeTPOf9M5I?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h2 class="card__text">BetBoom Московский Кубок Селебрити 2023</h2>
+                </div>
+                <div class="card">
+                    <iframe class="card__youtube" width="560" height="315" src="https://www.youtube.com/embed/oHeTPOf9M5I?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h2 class="card__text">СУПЕРФИНАЛ</h2>
+                </div>
+                <div class="card">
+                    <iframe class="card__youtube" width="560" height="315" src="https://www.youtube.com/embed/oHeTPOf9M5I?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <h2 class="card__text">СУПЕРФИНАЛ / 360° ТРАНСЛЯЦИЯ</h2>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
     <script src="js/slick.min.js"></script>    
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
