--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
     <title>360 Stream</title>
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/phosphor-icons@1.4.2/src/css/icons.css">
+    <script src="https://kit.fontawesome.com/845530799f.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header" id="header">
@@ -14,6 +16,8 @@
             <div class="header__body">
                 <a href="#"><h2 class="header__logo">360 Stream</h2></a> 
                 <nav class="header__nav">
+                    <a href="#about" class="header__link">Preview</a>
+                    <a href="#about" class="header__link">Price</a>
                     <a href="#about" class="header__link">About Us</a>
                     <a href="#" class="button button_green">Sign in</a>
                 </nav>
@@ -57,6 +61,23 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <ul class="footer__social">
+            <li class="footer__social-list">
+                <a href="https://vk.com/airelephant"><i class="fa-brands fa-vk"></i></a>
+                <a href="https://discord.gg/jVq5sjnJ"><i class="fa-brands fa-discord"></i></a>
+                <a href="https://instagram.com/air_elephant"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://www.youtube.com/@ZhekChih"><i class="fa-brands fa-square-youtube"></i></a>
+            </li>
+        </ul>
+        <div class="footer__links">
+            <a href="#header">main</a>
+            <a href="#about">about us</a>
+            <a href="#connect">price</a>
+            <a href="#team">team</a>
+        </div>
+        <div class="footer__name"><a href="https://vk.com/airelephant">Crate by Eugene Chi</a></div>
+    </footer>
     <script src="js/script.js"></script>
     <script src="js/slick.min.js"></script>    
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
