--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
     <header class="header" id="header">
         <div class="container">
             <div class="header__body">
-                <a href="#"><h2 class="header__logo">360 Stream</h2></a> 
+                <a href="index.html"><h2 class="header__logo">360 Stream</h2></a> 
                 <nav class="header__nav">
-                    <a href="#about" class="header__link">Preview</a>
-                    <a href="#about" class="header__link">Price</a>
+                    <a href="prewiew.html" class="header__link">Preview</a>
+                    <a href="#price" class="header__link">Price</a>
                     <a href="#about" class="header__link">About Us</a>
                     <a href="#" class="button button_green">Sign in</a>
                 </nav>
